--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                   <span class="date">August 3, 2020</span>
                   <span class="time">4 min read</span>
                   <span class="share">Share:</span>
-                  <a class="facebook" href="https://www.facebook.com/" target="_blank"><img class="fb" src="/img/facebook.svg" alt="facebook icon"></a>
-                  <a href="https://twitter.com/" target="_blank" class="twitter"><img class="tw" src="/img/twitter.svg" alt="twitter icon"></a>
-                  <a href="https://istagram.com" target="_blank" class="insta"><img src="/img/in.svg" alt="instagram icon" class="in"></a>
+                  <a class="facebook" href="https://www.facebook.com/" target="_blank"><img class="fb" src="img/facebook.svg" alt="facebook icon"></a>
+                  <a href="https://twitter.com/" target="_blank" class="twitter"><img class="tw" src="img/twitter.svg" alt="twitter icon"></a>
+                  <a href="https://istagram.com" target="_blank" class="insta"><img src="img/in.svg" alt="instagram icon" class="in"></a>
                </div>
                <div class="image">
                   <picture>
@@ -54,9 +54,9 @@
                <p class="par6">Enim, vel massa odio diam. Blandit massa gravida feugiat elementum id nec sed leo. Nisi in ornare lectus eget. Urna, risus, consectetur volutpat lorem purus. Velit aliquet nibh vitae maecenas. Consectetur neque ut aliquam eros, purus enim dignissim aenean vitae. Ultrices fames augue mattis tortor est justo, pharetra nibh risus. Facilisi at porttitor volutpat natoque proin amet, nulla. Vivamus ut lobortis sagittis curabitur tellus convallis eget netus vitae.</p>
                <div class="low-bar">
                <span class="share">Share:</span>
-               <a class="facebook" href="https://www.facebook.com/" target="_blank"><img class="fb" src="/img/facebook.svg" alt="facebook icon"></a>
-               <a href="https://twitter.com/" target="_blank" class="twitter"><img class="tw" src="/img/twitter.svg" alt="twitter icon"></a>
-               <a href="https://istagram.com" target="_blank" class="insta"><img src="/img/in.svg" alt="instagram icon" class="in"></a>
+               <a class="facebook" href="https://www.facebook.com/" target="_blank"><img class="fb" src="img/facebook.svg" alt="facebook icon"></a>
+               <a href="https://twitter.com/" target="_blank" class="twitter"><img class="tw" src="img/twitter.svg" alt="twitter icon"></a>
+               <a href="https://istagram.com" target="_blank" class="insta"><img src="img/in.svg" alt="instagram icon" class="in"></a>
                </div>
             </div>
          </div>
